--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "build": "cd client && npm install && npm run build",
+    "build": "cd client && npm install && npm run build:client && cd .. && npm install",
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix ./client",
